# os

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  DIARY.md  Justfile  README.md  TODO.md  Taskfile.dist.yaml  Taskfile.yaml  clippy.toml  crates.js  help.html  index.html  settings.html  src-files.js
.cargo/: config.toml
kernel/: all.html  constant.BOOT_STACK_SIZE.html  fn._start_kernel.html  fn.fast_sin.html  fn.kernel_entry.html  fn.kernel_main.html  fn.measure_timer_hz.html  fn.panic.html  fn.remap_boot_memory.html  index.html  sidebar-items.js  static.BOOT_STACK.html  static.MAPPER.html  static.TIMER_HZ.html  struct.Aligned.html
kernel/kernel/: Cargo.toml  kernel.ld
kernel/kernel-mmap/: Cargo.toml
kernel/kernel-mmap/src/: bootmem.rs  lib.rs  page_table.rs  vmem.rs
kernel/kernel/.cargo/: config.toml
kernel/kernel/src/: lib.rs  main.rs
kernel_acpi/: all.html  fn.sum.html  index.html  sidebar-items.js  trait.PhysMapRo.html
kernel_alloc/: all.html  index.html  sidebar-items.js
kernel_info/: all.html  index.html  sidebar-items.js
kernel_memory_addresses/: all.html  index.html  sidebar-items.js  struct.MemoryAddress.html  struct.MemoryAddressOffset.html  struct.MemoryPage.html  struct.PhysicalAddress.html  struct.PhysicalPage.html  struct.Size1G.html  struct.Size2M.html  struct.Size4K.html  struct.VirtualAddress.html  struct.VirtualPage.html  trait.PageSize.html
kernel_qemu/: all.html  index.html  macro.qemu_trace!.html  macro.qemu_trace.html  sidebar-items.js  struct.QemuLogger.html
kernel_registers/: all.html  index.html  sidebar-items.js  trait.LoadRegister.html  trait.LoadRegisterUnsafe.html  trait.StoreRegister.html  trait.StoreRegisterUnsafe.html
kernel_sync/: all.html  index.html  sidebar-items.js  struct.Mutex.html  struct.MutexGuard.html  struct.RawSpin.html  struct.RawTicket.html  struct.SpinLock.html  struct.SpinLockGuard.html  struct.SyncOnceCell.html  trait.RawLock.html  trait.RawUnlock.html  type.SpinMutex.html  type.TicketMutex.html
kernel_vmem/: all.html  fn.invalidate_tlb_page.html  fn.read_cr3_phys.html  index.html  sidebar-items.js  struct.VirtualMemoryPageBits.html  trait.FrameAlloc.html  trait.PhysFrameAlloc.html  trait.PhysMapper.html  trait.PhysMapperExt.html
os/kernel/kernel/: Cargo.toml  build.rs  kernel.ld
os/kernel/kernel-alloc/: Cargo.toml
os/kernel/kernel-alloc/src/: frame_alloc.rs  free_list.rs  kernel_allocator.rs  lib.rs  phys_mapper.rs  static_heap.rs  vmm.rs
os/kernel/kernel-info/: Cargo.toml
os/kernel/kernel-info/src/: boot.rs  lib.rs  memory.rs
os/kernel/kernel-memory-addresses/: Cargo.toml
os/kernel/kernel-memory-addresses/src/: lib.rs  memory_address.rs  memory_address_offset.rs  memory_page.rs  page_size.rs  physical_address.rs  physical_page.rs  virtual_address.rs  virtual_page.rs
os/kernel/kernel-qemu/: Cargo.toml
os/kernel/kernel-qemu/src/: lib.rs  logger.rs
os/kernel/kernel-registers/: Cargo.toml
os/kernel/kernel-registers/src/: cr0.rs  cr3.rs  cr4.rs  efer.rs  lib.rs  msr.rs  rflags.rs
os/kernel/kernel-registers/src/msr/: ia32_fmask.rs  ia32_gs_base.rs  ia32_kernel_gs_base.rs  ia32_lstar.rs  ia32_star.rs
os/kernel/kernel-vmem/: Cargo.toml
os/kernel/kernel-vmem/src/: addr2.rs  address_space.rs  addresses.rs  bits.rs  lib.rs  page_entry_bits.rs  page_table.rs  table2.rs  unified2.rs
os/kernel/kernel-vmem/src/address_space/: map_size.rs
os/kernel/kernel-vmem/src/page_table/: bits2.rs  pd.rs  pdpt.rs  pml4.rs  pt.rs  unified2.rs
os/kernel/kernel-vmem/src/table2/: pd.rs  pdpt.rs  pml4.rs  pt.rs
os/kernel/kernel/.cargo/: config.toml
os/kernel/kernel/src/: alloc.rs  allocator.rs  apic.rs  bootstrap_alloc.rs  cpuid.rs  elf.rs  framebuffer.rs  gdt.rs  idt.rs  init.rs  interrupts.rs  main.rs  msr.rs  panik.rs  per_cpu.rs  ports.rs  privilege.rs  ring.rs  smap.rs  syscall.rs  task.rs  tracing.rs  tsc.rs  tss.rs  userland.rs  userland_demo.rs  vmem.rs
os/kernel/kernel/src/alloc/: debug.rs
os/kernel/kernel/src/allocator/: kernel_allocator.rs  static_heap.rs
os/kernel/kernel/src/cpuid/: leaf01h.rs  leaf15h.rs  leaf16h.rs  ranges.rs
os/kernel/kernel/src/elf/: helpers.rs
os/kernel/kernel/src/gdt/: descriptors.rs  selectors.rs  tss_desc.rs
os/kernel/kernel/src/init/: boot_stack.rs
os/kernel/kernel/src/interrupts/: bp.rs  df.rs  gp.rs  int80_entry.rs  ist.rs  page_fault.rs  spurious.rs  ss.rs  syscall.rs  timer.rs
os/kernel/kernel/src/msr/: ia32_gs_base.rs  ia32_kernel_gs_base.rs  ia32_star.rs
os/kernel/kernel/src/per_cpu/: ist_stacks.rs  kernel_stacks.rs  stack.rs
os/kernel/kernel/src/privilege/: dpl.rs  ring.rs  rpl.rs
os/kernel/kernel/src/syscall/: entry.rs
os/support/stdlib/: Cargo.toml
os/support/stdlib/src/: lib.rs  stdlib.rs  syscall.rs  syscall_abi.rs
os/support/stdlib/src/stdlib/: fmt.rs
os/support/stdlib/src/syscall/: int80.rs
os/uefi/uefi-loader/: Cargo.toml
os/uefi/uefi-loader/src/: elf.rs  framebuffer.rs  logger.rs  main.rs  memory.rs  rsdp.rs  tracing.rs  uefi_mmap.rs  vmem.rs
os/uefi/uefi-loader/src/elf/: loader.rs  parser.rs  vmem.rs
os/utils/utils-accessors-derive/: Cargo.toml
os/utils/utils-accessors-derive/src/: lib.rs
scripts/: clippy-fix.sh  clippy-lint.sh  update-todos.sh
search.index/: 0026d2e7f2a0.js  00af6f6e72a8.js  00cc1d52af9c.js  01013e2d95d0.js  01aa29dc1261.js  01f0f90da80f.js  023feee0b004.js  02696eee8e63.js  033572b6ef61.js  037646c64b9c.js  03ffe9e601b4.js  04101cfd46c6.js  050b89fff056.js  052035892846.js  052e15f66b73.js  06219b69509a.js  06691b851ac3.js  07a5fc387890.js  080526e5f341.js  08fc20b31034.js  08fe2eafc956.js  090ad7e12c3f.js  091fac04daab.js  093901b84746.js  09b9b2a83d0c.js  09ff343081f6.js  0a5fd49b2455.js  (+352 more)
tools/packer/: Cargo.toml
tools/packer/src/: main.rs
uefi/uefi-loader/: Cargo.toml
uefi/uefi-loader/.cargo/: config.toml
uefi/uefi-loader/src/: elf.rs  elf_loader.rs  elf_parser.rs  file_system.rs  framebuffer.rs  main.rs  memory_mapper.rs  rsdp.rs
userland/init/: Cargo.toml  build.rs  linker.ld
userland/init/.cargo/: config.toml
userland/init/src/: main.rs
(+797 files in other folders)
