[workspace]
resolver = "3"
members = ["os/kernel/*", "os/uefi/*", "os/utils/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.91.0"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
repository = "https://github.com/sunsided/os"
keywords = ["os", "firmware", "uefi", "rust"]
categories = ["embedded", "os", "development-tools", "hardware-support"]
license = "EUPL-1.2"
publish = false

[workspace.dependencies]
bitfield-struct = { version = "0.12.0", default-features = false }
proc-macro2 = "1"
quote = "1"
syn = "2"
thiserror = { version = "2.0.17", default-features = false }
uefi = { version = "0.35", default-features = false }

[workspace.lints.clippy]
pedantic = "deny"
nursery = "warn"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
