[workspace]
resolver = "3"
members = ["os/kernel/*", "os/uefi/*", "os/utils/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.91.0"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
repository = "https://github.com/sunsided/os"
keywords = ["os", "firmware", "uefi", "rust"]
categories = ["embedded", "os", "development-tools", "hardware-support"]
license = "EUPL-1.2"
publish = false

[workspace.dependencies]
bitfield-struct = { version = "0.12.0", default-features = false }
log = { version = "0.4", default-features = false }
quote = { version = "1", default-features = false }
syn = { version = "2", default-features = false }
thiserror = { version = "2.0.17", default-features = false }
uefi = { version = "0.35", default-features = false }

[workspace.lints.clippy]
pedantic = "deny"
nursery = "warn"

[profile.dev]
opt-level = 0

[profile.release]
debug = "limited"
opt-level = 3
lto = "fat"
codegen-units = 1
