[package]
name = "packer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
packer-abi = { path = "../../os/utils/packer-abi", default-features = false }

[lints]
workspace = true
