[package]
name = "uefi-loader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
kernel-info = { path = "../../kernel/kernel-info" }
uefi = { workspace = true, features = ["alloc", "panic_handler"] }

[lints]
workspace = true
