[package]
name = "init"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
stdlib = { path = "../../os/support/stdlib" }

[lints]
workspace = true
