[package]
name = "kernel-alloc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
kernel-info = { path = "../kernel-info" }
kernel-sync = { path = "../kernel-sync" }
kernel-vmem = { path = "../kernel-vmem" }

[lints]
workspace = true
