[package]
name = "kernel-alloc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
kernel-info = { path = "../kernel-info" }
kernel-memory-addresses = { path = "../../kernel/kernel-memory-addresses" }
kernel-registers = { path = "../../kernel/kernel-registers", default-features = false, features = ["asm", "cr3"] }
kernel-vmem = { path = "../kernel-vmem" }
log.workspace = true
thiserror.workspace = true

[lints]
workspace = true
