[package]
name = "kernel-info"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
kernel-memory-addresses = { path = "../../kernel/kernel-memory-addresses" }

[lints]
workspace = true
