[package]
name = "kernel-qemu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[features]
default = ["enabled"]
enabled = []

[dependencies]
log.workspace = true

[lints]
workspace = true
