[package]
name = "kernel-registers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["kernel"]
kernel = ["asm", "cr0", "cr3", "cr4", "efer", "msr", "rflags"]
uefi = ["asm", "cr0", "cr4", "efer"]
asm = []
cr0 = []
cr3 = []
cr4 = []
efer = []
msr = []
rflags = []

[dependencies]
bitfield-struct.workspace = true
kernel-memory-addresses = { path = "../../kernel/kernel-memory-addresses" }

[lints]
workspace = true
