[package]
name = "kernel-vmem"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
bitfield-struct.workspace = true
kernel-info = { path = "../kernel-info" }
kernel-memory-addresses = { path = "../../kernel/kernel-memory-addresses" }
kernel-registers = { path = "../../kernel/kernel-registers", default-features = false, features = ["asm", "cr3"] }
log.workspace = true
thiserror.workspace = true
utils-accessors-derive = { path = "../../utils/utils-accessors-derive" }

[lints]
workspace = true
