[package]
name = "kernel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[features]
default = ["qemu"]
qemu = ["kernel-qemu/enabled"]

[dependencies]
# kernel-alloc = { path = "../kernel-alloc" }
kernel-info = { path = "../kernel-info" }
kernel-qemu = { path = "../../kernel/kernel-qemu", default-features = false }
kernel-vmem = { path = "../../kernel/kernel-vmem" }

[build-dependencies]
kernel-info = { path = "../kernel-info" }

[lints]
workspace = true
