[package]
name = "kernel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[features]
default = ["qemu"]
qemu = ["kernel-qemu/enabled"]

[dependencies]
bitfield-struct.workspace = true
kernel-alloc = { path = "../kernel-alloc" }
kernel-info = { path = "../kernel-info" }
kernel-qemu = { path = "../../kernel/kernel-qemu", default-features = false }
kernel-sync = { path = "../../kernel/kernel-sync" }
kernel-vmem = { path = "../../kernel/kernel-vmem" }
log.workspace = true

[build-dependencies]
kernel-info = { path = "../kernel-info" }

[lints]
workspace = true
