[package]
name = "stdlib"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["userland"]
kernel = ["syscall-abi"]
stdlib = ["syscall"]
syscall-abi = []
syscall = ["syscall-abi"]
userland = ["syscall-abi", "stdlib"]

[dependencies]

[lints]
workspace = true
