[package]
name = "uefi-loader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[features]
default = ["qemu"]
qemu = ["dep:kernel-qemu"]

[dependencies]
kernel-info = { path = "../../kernel/kernel-info" }
kernel-qemu = { path = "../../kernel/kernel-qemu", optional = true }
kernel-vmem = { path = "../../kernel/kernel-vmem" }
thiserror.workspace = true
uefi = { workspace = true, features = ["alloc", "panic_handler"] }

[lints]
workspace = true
