[package]
name = "uefi-loader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[features]
default = ["qemu"]
qemu = ["kernel-qemu/enabled"]

[dependencies]
bitfield-struct.workspace = true
kernel-info = { path = "../../kernel/kernel-info" }
kernel-qemu = { path = "../../kernel/kernel-qemu", default-features = false }
kernel-registers = { path = "../../kernel/kernel-registers", default-features = false, features = ["uefi"] }
kernel-vmem = { path = "../../kernel/kernel-vmem" }
log.workspace = true
thiserror.workspace = true
uefi = { workspace = true, features = ["alloc", "panic_handler"] }

[lints]
workspace = true
