[package]
name = "utils-accessors-derive"
description = "Derive macro that generates set_/with_ setters for struct fields"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
syn.workspace = true

[lints]
workspace = true
